--- a/CalendarWidget/Base.lproj/MainInterface.storyboard
+++ b/CalendarWidget/Base.lproj/MainInterface.storyboard
@@ -14,15 +14,15 @@
                         <viewControllerLayoutGuide type="bottom" id="FKl-LY-JtV"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" simulatedAppContext="notificationCenter" id="S3S-Oj-5AN">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="250"/>
+                        <rect key="frame" x="0.0" y="0.0" width="450" height="350"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" bounces="NO" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="9fX-B8-zKn">
-                                <rect key="frame" x="10" y="20" width="200" height="200"/>
+                                <rect key="frame" x="94" y="75" width="250" height="220"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="280" id="X8G-nP-Ita"/>
-                                    <constraint firstAttribute="height" constant="250" id="nIG-qA-zZf"/>
+                                    <constraint firstAttribute="width" constant="250" id="X8G-nP-Ita"/>
+                                    <constraint firstAttribute="height" constant="220" id="nIG-qA-zZf"/>
                                 </constraints>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="0.0" minimumInteritemSpacing="0.0" id="6JB-tE-Ga3">
                                     <size key="itemSize" width="50" height="50"/>
@@ -59,11 +59,115 @@
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Sun" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9am-Uv-GPx">
+                                <rect key="frame" x="107" y="46" width="30" height="21"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <fontDescription key="fontDescription" type="system" weight="light" pointSize="14"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Mon" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fEv-CW-iNH">
+                                <rect key="frame" x="146" y="44" width="34" height="21"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <fontDescription key="fontDescription" type="system" weight="light" pointSize="14"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Sat" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Lct-FA-zQD">
+                                <rect key="frame" x="343" y="46" width="26" height="21"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <fontDescription key="fontDescription" type="system" weight="light" pointSize="14"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Tue" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gqY-AV-ixB">
+                                <rect key="frame" x="188" y="44" width="32" height="21"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <fontDescription key="fontDescription" type="system" weight="light" pointSize="14"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Wed" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6Lp-kj-jcG">
+                                <rect key="frame" x="227" y="44" width="39" height="21"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <fontDescription key="fontDescription" type="system" weight="light" pointSize="14"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Thu" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eWg-PT-A9O">
+                                <rect key="frame" x="270" y="45" width="31" height="21"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <fontDescription key="fontDescription" type="system" weight="light" pointSize="14"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Fri" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tZc-T5-mjZ">
+                                <rect key="frame" x="308" y="46" width="27" height="21"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <fontDescription key="fontDescription" type="system" weight="light" pointSize="14"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="January 2016" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zrE-CB-5D9">
+                                <rect key="frame" x="135" y="13" width="205" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="20" id="kMk-f8-ijQ"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WTw-u1-FV9">
+                                <rect key="frame" x="102" y="12" width="25" height="25"/>
+                                <color key="backgroundColor" red="0.42300127529999998" green="1" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="20" id="ZA0-Ii-w7j"/>
+                                    <constraint firstAttribute="height" constant="20" id="kul-6i-X9V"/>
+                                </constraints>
+                                <state key="normal" image="arrow-left"/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hAd-50-Nmq">
+                                <rect key="frame" x="346" y="11" width="25" height="25"/>
+                                <color key="backgroundColor" red="0.25760747699999997" green="1" blue="0.072567413789999993" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="20" id="MR6-LU-lM1"/>
+                                    <constraint firstAttribute="height" constant="20" id="SOV-JL-Bqr"/>
+                                </constraints>
+                                <state key="normal" image="arrow-right"/>
+                            </button>
                         </subviews>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="FKl-LY-JtV" firstAttribute="top" secondItem="9fX-B8-zKn" secondAttribute="bottom" constant="5" id="Ngx-Tg-gdT"/>
+                            <constraint firstItem="tZc-T5-mjZ" firstAttribute="leading" secondItem="eWg-PT-A9O" secondAttribute="trailing" id="00W-cj-UwS"/>
+                            <constraint firstItem="9fX-B8-zKn" firstAttribute="top" secondItem="9am-Uv-GPx" secondAttribute="bottom" id="2w4-gG-a8w"/>
+                            <constraint firstItem="gqY-AV-ixB" firstAttribute="leading" secondItem="fEv-CW-iNH" secondAttribute="trailing" id="6Wl-pg-cFi"/>
+                            <constraint firstItem="fEv-CW-iNH" firstAttribute="leading" secondItem="9am-Uv-GPx" secondAttribute="trailing" id="8on-CW-FFB"/>
+                            <constraint firstItem="9fX-B8-zKn" firstAttribute="leading" secondItem="WTw-u1-FV9" secondAttribute="leading" id="BHe-th-I6n"/>
+                            <constraint firstItem="zrE-CB-5D9" firstAttribute="top" secondItem="Ft6-oW-KC0" secondAttribute="bottom" constant="5" id="CVl-1V-2ow"/>
+                            <constraint firstItem="fEv-CW-iNH" firstAttribute="width" secondItem="9am-Uv-GPx" secondAttribute="width" id="F9C-xV-c30"/>
+                            <constraint firstItem="6Lp-kj-jcG" firstAttribute="top" secondItem="zrE-CB-5D9" secondAttribute="bottom" constant="5" id="Fmk-BN-S0v"/>
+                            <constraint firstItem="eWg-PT-A9O" firstAttribute="leading" secondItem="6Lp-kj-jcG" secondAttribute="trailing" id="Fwe-lL-Iiw"/>
+                            <constraint firstItem="9fX-B8-zKn" firstAttribute="top" secondItem="Lct-FA-zQD" secondAttribute="bottom" id="G0q-vu-YIL"/>
+                            <constraint firstItem="zrE-CB-5D9" firstAttribute="centerX" secondItem="S3S-Oj-5AN" secondAttribute="centerX" id="GjI-pD-D4w"/>
+                            <constraint firstItem="Lct-FA-zQD" firstAttribute="leading" secondItem="tZc-T5-mjZ" secondAttribute="trailing" id="IKn-AV-E7G"/>
+                            <constraint firstItem="6Lp-kj-jcG" firstAttribute="width" secondItem="9am-Uv-GPx" secondAttribute="width" id="Jcv-oU-nl1"/>
+                            <constraint firstItem="6Lp-kj-jcG" firstAttribute="leading" secondItem="gqY-AV-ixB" secondAttribute="trailing" id="KcF-KO-mhR"/>
+                            <constraint firstItem="gqY-AV-ixB" firstAttribute="width" secondItem="9am-Uv-GPx" secondAttribute="width" id="Nba-yM-M6u"/>
+                            <constraint firstItem="9am-Uv-GPx" firstAttribute="leading" secondItem="9fX-B8-zKn" secondAttribute="leading" id="Oug-Cm-Rxx"/>
                             <constraint firstItem="9fX-B8-zKn" firstAttribute="centerX" secondItem="S3S-Oj-5AN" secondAttribute="centerX" id="Qnf-BG-BJO"/>
-                            <constraint firstItem="9fX-B8-zKn" firstAttribute="top" secondItem="Ft6-oW-KC0" secondAttribute="bottom" constant="5" id="lIf-Fg-ekH"/>
+                            <constraint firstItem="hAd-50-Nmq" firstAttribute="trailing" secondItem="9fX-B8-zKn" secondAttribute="trailing" id="T7u-30-X8J"/>
+                            <constraint firstItem="FKl-LY-JtV" firstAttribute="top" secondItem="9fX-B8-zKn" secondAttribute="bottom" constant="5" id="TB8-Zq-e6t"/>
+                            <constraint firstItem="9fX-B8-zKn" firstAttribute="top" secondItem="6Lp-kj-jcG" secondAttribute="bottom" id="Tgn-Pu-Ktn"/>
+                            <constraint firstItem="tZc-T5-mjZ" firstAttribute="width" secondItem="9am-Uv-GPx" secondAttribute="width" id="X79-UQ-8Ss"/>
+                            <constraint firstItem="9fX-B8-zKn" firstAttribute="top" secondItem="tZc-T5-mjZ" secondAttribute="bottom" id="cBh-9x-wV7"/>
+                            <constraint firstItem="hAd-50-Nmq" firstAttribute="top" secondItem="Ft6-oW-KC0" secondAttribute="bottom" constant="5" id="ebA-Wl-cSh"/>
+                            <constraint firstItem="eWg-PT-A9O" firstAttribute="width" secondItem="9am-Uv-GPx" secondAttribute="width" id="gC5-9I-4bW"/>
+                            <constraint firstItem="Lct-FA-zQD" firstAttribute="trailing" secondItem="9fX-B8-zKn" secondAttribute="trailing" id="iTy-LU-Zon"/>
+                            <constraint firstItem="Lct-FA-zQD" firstAttribute="width" secondItem="9am-Uv-GPx" secondAttribute="width" id="jWb-VX-Xym"/>
+                            <constraint firstItem="9fX-B8-zKn" firstAttribute="top" secondItem="fEv-CW-iNH" secondAttribute="bottom" id="jbZ-ns-BhR"/>
+                            <constraint firstItem="WTw-u1-FV9" firstAttribute="top" secondItem="Ft6-oW-KC0" secondAttribute="bottom" constant="5" id="n1u-Hu-mzD"/>
+                            <constraint firstItem="9fX-B8-zKn" firstAttribute="top" secondItem="gqY-AV-ixB" secondAttribute="bottom" id="o89-9h-eiq"/>
+                            <constraint firstItem="9fX-B8-zKn" firstAttribute="top" secondItem="eWg-PT-A9O" secondAttribute="bottom" id="wvF-1D-hxb"/>
                         </constraints>
                     </view>
                     <extendedEdge key="edgesForExtendedLayout"/>
@@ -71,7 +175,7 @@
                     <nil key="simulatedTopBarMetrics"/>
                     <nil key="simulatedBottomBarMetrics"/>
                     <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-                    <size key="freeformSize" width="320" height="250"/>
+                    <size key="freeformSize" width="450" height="350"/>
                     <connections>
                         <outlet property="collectionView" destination="9fX-B8-zKn" id="dTm-nI-PIS"/>
                     </connections>
@@ -81,4 +185,8 @@
             <point key="canvasLocation" x="516" y="285"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="arrow-left" width="25" height="25"/>
+        <image name="arrow-right" width="25" height="25"/>
+    </resources>
 </document>
