--- a/CalendarWidget/Base.lproj/MainInterface.storyboard
+++ b/CalendarWidget/Base.lproj/MainInterface.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="14F1603" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="M4Y-Lb-cyx">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="14F1706" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="M4Y-Lb-cyx">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
@@ -59,49 +59,49 @@
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Sun" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9am-Uv-GPx">
+                            <label opaque="NO" userInteractionEnabled="NO" tag="1" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="S" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9am-Uv-GPx">
                                 <rect key="frame" x="107" y="46" width="30" height="21"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <fontDescription key="fontDescription" type="system" weight="light" pointSize="14"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Mon" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fEv-CW-iNH">
+                            <label opaque="NO" userInteractionEnabled="NO" tag="2" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="M" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fEv-CW-iNH">
                                 <rect key="frame" x="146" y="44" width="34" height="21"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <fontDescription key="fontDescription" type="system" weight="light" pointSize="14"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Sat" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Lct-FA-zQD">
+                            <label opaque="NO" userInteractionEnabled="NO" tag="7" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="S" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Lct-FA-zQD">
                                 <rect key="frame" x="343" y="46" width="26" height="21"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <fontDescription key="fontDescription" type="system" weight="light" pointSize="14"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Tue" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gqY-AV-ixB">
+                            <label opaque="NO" userInteractionEnabled="NO" tag="3" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="T" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gqY-AV-ixB">
                                 <rect key="frame" x="188" y="44" width="32" height="21"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <fontDescription key="fontDescription" type="system" weight="light" pointSize="14"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Wed" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6Lp-kj-jcG">
+                            <label opaque="NO" userInteractionEnabled="NO" tag="4" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="W" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6Lp-kj-jcG">
                                 <rect key="frame" x="227" y="44" width="39" height="21"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <fontDescription key="fontDescription" type="system" weight="light" pointSize="14"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Thu" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eWg-PT-A9O">
+                            <label opaque="NO" userInteractionEnabled="NO" tag="5" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="T" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eWg-PT-A9O">
                                 <rect key="frame" x="270" y="45" width="31" height="21"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <fontDescription key="fontDescription" type="system" weight="light" pointSize="14"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Fri" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tZc-T5-mjZ">
+                            <label opaque="NO" userInteractionEnabled="NO" tag="6" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="F" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tZc-T5-mjZ">
                                 <rect key="frame" x="308" y="46" width="27" height="21"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <fontDescription key="fontDescription" type="system" weight="light" pointSize="14"/>
@@ -110,8 +110,9 @@
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="January 2016" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zrE-CB-5D9">
                                 <rect key="frame" x="135" y="13" width="205" height="21"/>
+                                <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="20" id="kMk-f8-ijQ"/>
+                                    <constraint firstAttribute="height" constant="35" id="kMk-f8-ijQ"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -119,21 +120,27 @@
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WTw-u1-FV9">
                                 <rect key="frame" x="102" y="12" width="25" height="25"/>
-                                <color key="backgroundColor" red="0.42300127529999998" green="1" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="20" id="ZA0-Ii-w7j"/>
-                                    <constraint firstAttribute="height" constant="20" id="kul-6i-X9V"/>
+                                    <constraint firstAttribute="width" constant="35" id="ZA0-Ii-w7j"/>
+                                    <constraint firstAttribute="height" constant="35" id="kul-6i-X9V"/>
                                 </constraints>
-                                <state key="normal" image="arrow-left"/>
+                                <state key="normal" image="fat-left"/>
+                                <connections>
+                                    <action selector="prevMonth:" destination="M4Y-Lb-cyx" eventType="touchUpInside" id="yJg-3s-Hgp"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hAd-50-Nmq">
                                 <rect key="frame" x="346" y="11" width="25" height="25"/>
-                                <color key="backgroundColor" red="0.25760747699999997" green="1" blue="0.072567413789999993" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="20" id="MR6-LU-lM1"/>
-                                    <constraint firstAttribute="height" constant="20" id="SOV-JL-Bqr"/>
+                                    <constraint firstAttribute="width" constant="35" id="MR6-LU-lM1"/>
+                                    <constraint firstAttribute="height" constant="35" id="SOV-JL-Bqr"/>
                                 </constraints>
-                                <state key="normal" image="arrow-right"/>
+                                <state key="normal" image="fat-right"/>
+                                <connections>
+                                    <action selector="nextMonth:" destination="M4Y-Lb-cyx" eventType="touchUpInside" id="yLS-dH-jEf"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
@@ -144,14 +151,15 @@
                             <constraint firstItem="fEv-CW-iNH" firstAttribute="leading" secondItem="9am-Uv-GPx" secondAttribute="trailing" id="8on-CW-FFB"/>
                             <constraint firstItem="9fX-B8-zKn" firstAttribute="leading" secondItem="WTw-u1-FV9" secondAttribute="leading" id="BHe-th-I6n"/>
                             <constraint firstItem="zrE-CB-5D9" firstAttribute="top" secondItem="Ft6-oW-KC0" secondAttribute="bottom" constant="5" id="CVl-1V-2ow"/>
+                            <constraint firstItem="hAd-50-Nmq" firstAttribute="leading" secondItem="zrE-CB-5D9" secondAttribute="trailing" id="EHD-9d-epy"/>
                             <constraint firstItem="fEv-CW-iNH" firstAttribute="width" secondItem="9am-Uv-GPx" secondAttribute="width" id="F9C-xV-c30"/>
                             <constraint firstItem="6Lp-kj-jcG" firstAttribute="top" secondItem="zrE-CB-5D9" secondAttribute="bottom" constant="5" id="Fmk-BN-S0v"/>
                             <constraint firstItem="eWg-PT-A9O" firstAttribute="leading" secondItem="6Lp-kj-jcG" secondAttribute="trailing" id="Fwe-lL-Iiw"/>
                             <constraint firstItem="9fX-B8-zKn" firstAttribute="top" secondItem="Lct-FA-zQD" secondAttribute="bottom" id="G0q-vu-YIL"/>
-                            <constraint firstItem="zrE-CB-5D9" firstAttribute="centerX" secondItem="S3S-Oj-5AN" secondAttribute="centerX" id="GjI-pD-D4w"/>
                             <constraint firstItem="Lct-FA-zQD" firstAttribute="leading" secondItem="tZc-T5-mjZ" secondAttribute="trailing" id="IKn-AV-E7G"/>
                             <constraint firstItem="6Lp-kj-jcG" firstAttribute="width" secondItem="9am-Uv-GPx" secondAttribute="width" id="Jcv-oU-nl1"/>
                             <constraint firstItem="6Lp-kj-jcG" firstAttribute="leading" secondItem="gqY-AV-ixB" secondAttribute="trailing" id="KcF-KO-mhR"/>
+                            <constraint firstItem="zrE-CB-5D9" firstAttribute="leading" secondItem="WTw-u1-FV9" secondAttribute="trailing" id="MSo-za-eVS"/>
                             <constraint firstItem="gqY-AV-ixB" firstAttribute="width" secondItem="9am-Uv-GPx" secondAttribute="width" id="Nba-yM-M6u"/>
                             <constraint firstItem="9am-Uv-GPx" firstAttribute="leading" secondItem="9fX-B8-zKn" secondAttribute="leading" id="Oug-Cm-Rxx"/>
                             <constraint firstItem="9fX-B8-zKn" firstAttribute="centerX" secondItem="S3S-Oj-5AN" secondAttribute="centerX" id="Qnf-BG-BJO"/>
@@ -177,7 +185,10 @@
                     <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
                     <size key="freeformSize" width="450" height="350"/>
                     <connections>
+                        <outlet property="buttonLeft" destination="WTw-u1-FV9" id="kIf-go-jmT"/>
+                        <outlet property="buttonRight" destination="hAd-50-Nmq" id="4sL-dH-aug"/>
                         <outlet property="collectionView" destination="9fX-B8-zKn" id="dTm-nI-PIS"/>
+                        <outlet property="monthLabel" destination="zrE-CB-5D9" id="aLy-t7-Ef0"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vXp-U4-Rya" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -186,7 +197,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="arrow-left" width="25" height="25"/>
-        <image name="arrow-right" width="25" height="25"/>
+        <image name="fat-left" width="25" height="25"/>
+        <image name="fat-right" width="25" height="25"/>
     </resources>
 </document>
